--- a/src/app/features/navbar/navbar.component.html
+++ b/src/app/features/navbar/navbar.component.html
@@ -1,3 +1,28 @@
-<p>
-  navbar works!
-</p>
+<header>
+  <nav>
+    <mat-toolbar color="primary">
+      <img src="/images/28313441_10214135880646939_60839564_n.png" srcset="" alt="Xenos" />
+      <button mat-button routerlink="rentals">
+        Rentals
+      </button>
+      <button mat-button routerlink="realestate">
+        Real Estate
+      </button>
+      <button mat-button routerlink="seller">
+        Seller/Landlord Tools
+      </button>
+      <div class="flex-spacer" style="flex: 1 1 auto"></div>
+      <button mat-button [matMenuTriggerFor]="login">
+        My Xenos
+      </button>
+      <mat-menu #login="matMenu">
+        <button mat-menu-item routerlink="register">
+          Register
+        </button>
+        <button mat-menu-item routerlink="login">
+          Login
+        </button>
+      </mat-menu>
+    </mat-toolbar>
+  </nav>
+</header>
