--- a/src/app/features/navbar/navbar.component.html
+++ b/src/app/features/navbar/navbar.component.html
@@ -2,13 +2,13 @@
   <nav>
     <mat-toolbar color="primary">
       <img src="/images/28313441_10214135880646939_60839564_n.png" srcset="" alt="Xenos" />
-      <button mat-button routerlink="rentals">
+      <button mat-button routerLink="rentals">
         Rentals
       </button>
-      <button mat-button routerlink="realestate">
+      <button mat-button routerLink="realestate">
         Real Estate
       </button>
-      <button mat-button routerlink="seller">
+      <button mat-button routerLink="seller">
         Seller/Landlord Tools
       </button>
       <div class="flex-spacer" style="flex: 1 1 auto"></div>
@@ -16,10 +16,10 @@
         My Xenos
       </button>
       <mat-menu #login="matMenu">
-        <button mat-menu-item routerlink="register">
+        <button mat-menu-item routerLink="register">
           Register
         </button>
-        <button mat-menu-item routerlink="login">
+        <button mat-menu-item routerLink="login">
           Login
         </button>
       </mat-menu>
