--- a/src/app/features/register/register.component.html
+++ b/src/app/features/register/register.component.html
@@ -1,3 +1,39 @@
-<p>
-  register works!
-</p>
+<mat-card>
+  <mat-card-title>
+    Register
+  </mat-card-title>
+  <mat-card-content>
+    <form [formGroup]="registerForm">
+      <div style="text-align:center;">
+        <div>
+          <mat-form-field>
+            <input matInput placeholder="Username" formControlName="username">
+            <mat-error *ngIf="registerForm.get('username').invalid && registerForm.get('username').touched">
+              {{getUsernameError()}}
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field>
+            <input type="password" matInput placeholder="Password" formControlName="password">
+            <mat-error *ngIf="registerForm.get('password').invalid && registerForm.get('password').touched">
+              {{getPasswordError()}}
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field>
+            <input matInput placeholder="Email" formControlName="email">
+            <mat-error *ngIf="registerForm.get('email').invalid && registerForm.get('email').touched">
+              {{getEmailError()}}
+            </mat-error>
+          </mat-form-field>
+
+        </div>
+        <div>
+          <button mat-button>Register</button>
+        </div>
+      </div>
+    </form>
+  </mat-card-content>
+</mat-card>
