A lot of changes

--- a/src/app/features/property/property.component.html
+++ b/src/app/features/property/property.component.html
@@ -1,3 +1,7 @@
-<p>
-  property works!
-</p>
+<mat-card>
+  <img src="" alt="property" />
+  Title: {{property.title}} <br />
+  Posted By: {{property.user}} <br />
+  # of Rooms: {{property.rooms}} <br />
+  Rate: {{property.price}} <br />
+</mat-card>
