--- a/src/app/features/register/register.component.html
+++ b/src/app/features/register/register.component.html
@@ -31,7 +31,7 @@
 
         </div>
         <div>
-          <button mat-button>Register</button>
+          <button mat-button  (click)="submitRegistration()">Register</button>
         </div>
       </div>
     </form>
