--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -22,7 +22,7 @@
         </mat-form-field>
       </div>
       <div>
-        <button mat-button>Login</button>
+        <button mat-button (click)="submitLogin()">Login</button>
       </div>
     </div>
   </form>
