Property list beginnings

--- a/src/app/features/property/property.component.html
+++ b/src/app/features/property/property.component.html
@@ -1,7 +1,6 @@
-<mat-card>
-  <img src="" alt="property" />
-  Title: {{property.title}} <br />
-  Posted By: {{property.user}} <br />
-  # of Rooms: {{property.rooms}} <br />
-  Rate: {{property.price}} <br />
-</mat-card>
+<img src="" alt="property" />
+<br />Title: {{property.title}}
+<br /> Posted By: {{property.user}}
+<br /> # of Rooms: {{property.rooms}}
+<br /> Rate: {{property.price}}
+<br />
