Token logic working, changed to HttpClient

--- a/src/app/features/navbar/navbar.component.html
+++ b/src/app/features/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <header>
-  <nav>
+  <nav fxHide fxShow.gt-sm>
     <mat-toolbar color="primary">
       <img src="/images/28313441_10214135880646939_60839564_n.png" srcset="" alt="Xenos" />
       <button mat-button routerLink="rentals">
@@ -25,4 +25,23 @@
       </mat-menu>
     </mat-toolbar>
   </nav>
+
+  <nav fxHide fxShow.lt-sm>
+    <mat-toolbar color="primary">
+      <mat-menu #mobileMenu="matMenu">
+        <button mat-menu-item routerLink="register">
+          Register
+        </button>
+        <button mat-menu-item routerLink="login">
+          Login
+        </button>
+      </mat-menu>
+
+      <button mat-icon-button [matMenuTriggerFor]="mobileMenu">
+        <mat-icon>reorder</mat-icon>
+      </button>
+    </mat-toolbar>
+
+  </nav>
+
 </header>
