--- a/src/app/features/register/register.component.html
+++ b/src/app/features/register/register.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="row" fxLayoutAlign="start center">
-  <div fxFlex = "20%"></div>
-  <div fxFlex = "60%">
+  <div fxFlex = "20%" fxFlex.lt-sm="0%"></div>
+  <div fxFlex = "60%" fxFlex.lt-sm="100%">
     <mat-card class="margin-top">
     <mat-card-title>
       Register
