updated forms and added background

--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -1,34 +1,33 @@
 <div fxLayout="row" fxLayoutAlign="start center">
-  <div fxFlex = "20%" fxFlex.lt-sm = "0%"></div>
-  <div fxFlex = "60%" fxFlex.lt-sm="100%" >
+  <div fxFlex.xs="5%" fxFlex.sm="15%" fxFlex.md="20%"></div>
+  <div fxFlex.xs="90%" fxFlex.sm="70%" fxFlex.md="60%" >
 
     <mat-card class="margin-top">
-      <mat-card-title>
+      <mat-card-title fxLayoutAlign="center">
         Login
       </mat-card-title>
-      <mat-card-content>
-        <form [formGroup]="loginForm">
-          <div style="text-align:center;">
-            <div>
-              <mat-form-field>
-                <input matInput placeholder="Username" formControlName="username">
-                <mat-error *ngIf="loginForm.get('username').invalid && loginForm.get('username').touched">
-                  {{getUsernameError()}}
-                </mat-error>
-              </mat-form-field>
+      <mat-divider></mat-divider>
+      <mat-card-content fxLayoutAlign="center">
+        <form [formGroup]="loginForm" style="width: 100%">
+
+            <mat-form-field class="margin-top margin-bottom" style="width: 100%">
+              <input matInput placeholder="Username" formControlName="username" style="width: 75%;">
+              <mat-error *ngIf="loginForm.get('username').invalid && loginForm.get('username').touched">
+                {{getUsernameError()}}
+              </mat-error>
+            </mat-form-field>
+
+            <mat-form-field class="margin-bottom" style="width: 100%;">
+              <input type="password" matInput placeholder="Password" formControlName="password">
+              <mat-error *ngIf="loginForm.get('password').invalid && loginForm.get('password').touched">
+                {{getPasswordError()}}
+              </mat-error>
+            </mat-form-field>
+
+            <div fxLayoutAlign="center" class="margin-top">
+              <button mat-raised-button color="accent" (click)="submitLogin()">Login</button>
             </div>
-            <div>
-              <mat-form-field>
-                <input type="password" matInput placeholder="Password" formControlName="password">
-                <mat-error *ngIf="loginForm.get('password').invalid && loginForm.get('password').touched">
-                  {{getPasswordError()}}
-                </mat-error>
-              </mat-form-field>
-            </div>
-            <div>
-              <button mat-button (click)="submitLogin()">Login</button>
-            </div>
-          </div>
+
         </form>
       </mat-card-content>
     </mat-card>
