Property listings hooked up to API

--- a/src/app/features/property/property.component.html
+++ b/src/app/features/property/property.component.html
@@ -1,4 +1,4 @@
-<img src="" alt="property" />
+<img src="../../../assets/43.jpg" alt="property" height="250" width="250" />
 <br />Title: {{property.title}}
 <br /> Posted By: {{property.user}}
 <br /> # of Rooms: {{property.rooms}}
