--- a/src/app/features/navbar/navbar.component.html
+++ b/src/app/features/navbar/navbar.component.html
@@ -2,11 +2,8 @@
   <nav fxHide fxShow.gt-sm>
     <mat-toolbar color="primary">
       <img src="/images/28313441_10214135880646939_60839564_n.png" srcset="" alt="Xenos" />
-      <button mat-button routerLink="rentals">
-        Rentals
-      </button>
-      <button mat-button routerLink="realestate">
-        Real Estate
+      <button mat-button routerLink="propertyList">
+        Listings
       </button>
       <button mat-button routerLink="seller">
         Seller/Landlord Tools
