Working on search component

--- a/src/app/features/property/property.component.html
+++ b/src/app/features/property/property.component.html
@@ -1,6 +1,8 @@
-<img src="../../../assets/43.jpg" alt="property" height="250" width="250" />
-<br />Title: {{property.title}}
-<br /> Posted By: {{property.user}}
-<br /> # of Rooms: {{property.rooms}}
-<br /> Rate: {{property.price}}
-<br />
+<mat-card style="max-width:300px">
+  <img src="../../../assets/43.jpg" alt="property" height="250" width="250" />
+  <br /><b>Title:</b> {{property.title}}
+  <br /><b>Posted By:</b> {{property.user}}
+  <br /><b># of Rooms:</b> {{property.rooms}}
+  <br /><b>Rate:</b> {{property.price}}
+  <br />
+</mat-card>
