EventEmitter causes some very bizarre errors, commented code out for now.

--- a/src/app/features/propertylist/propertylist.component.html
+++ b/src/app/features/propertylist/propertylist.component.html
@@ -1,6 +1,6 @@
 <!-- Search component goes here -->
 <div style="text-align:center">
-  <app-search (filteredSearch)="getFilteredProperties($event)"></app-search>
+  <app-search></app-search>
 </div>
 <mat-card *ngFor="let property of properties">
   <app-property [property]="property"></app-property>
