--- a/src/app/features/search/search.component.html
+++ b/src/app/features/search/search.component.html
@@ -16,6 +16,6 @@
           {{getSearchTermError()}}
         </mat-error>
     </mat-form-field>
-    <button mat-button (click)="filterSearch()">Filter</button>
+    <button mat-button>Filter</button>
   </form>
 </mat-card>
