--- a/src/app/features/property/property.component.html
+++ b/src/app/features/property/property.component.html
@@ -1,4 +1,4 @@
-<mat-card style="max-width:300px">
+<mat-card class="radius" style="max-width:300px;">
   <img src="../../../assets/43.jpg" alt="property" height="250" width="250" />
   <br /><b>Title:</b> {{property.title}}
   <br /><b>Posted By:</b> {{property.user}}
