Unique login navbar

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,3 +1,16 @@
-<p>
-  home works!
-</p>
+<mat-card class="margin-top">
+  <mat-card-title fxLayoutAlign="center">
+    Welcome to Xenos
+  </mat-card-title>
+  <mat-card-content fxLayoutAlign="center">
+    <mat-divider></mat-divider>
+  </mat-card-content>
+  <div fxLayout="row" fxLayoutAlign="start center">
+    <div fxFlex.xs="5%" fxFlex.sm="15%" fxFlex.md="20%"></div>
+    <div fxFlex.xs="90%" fxFlex.sm="70%" fxFlex.md="60%">
+      <br>
+      Some features of Xenos are now live.  Get ready for a taste of the next level of rental property and real estate listings
+    </div>
+    <div fxFlex></div>
+  </div>
+</mat-card>
