Cleaned up login status

--- a/src/app/features/editproperty/editproperty.component.html
+++ b/src/app/features/editproperty/editproperty.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="row" fxLayoutAlign="start center">
   <div fxFlex.xs="5%" fxFlex.sm="15%" fxFlex.md="20%"></div>
   <div fxFlex.xs="90%" fxFlex.sm="70%" fxFlex.md="60%">
-
+    <br/>
     <mat-card class="margin-top">
       <mat-card-title fxLayoutAlign="center">
         Add/Update Listing
@@ -101,7 +101,7 @@
           </mat-form-field>
           <br />
           <br />
-          <button mat-button (click)="submitProperty()">Submit</button>
+          <button mat-raised-button color="accent" (click)="submitProperty()">Submit</button>
         </form>
       </mat-card-content>
 
