--- a/src/app/features/property/property.component.html
+++ b/src/app/features/property/property.component.html
@@ -1,8 +1,10 @@
-<mat-card class="radius" style="max-width:300px;">
-  <img src="../../../assets/43.jpg" alt="property" height="250" width="250" />
-  <br /><b>Title:</b> {{property.title}}
-  <br /><b>Posted By:</b> {{property.user?.username}}
-  <br /><b>Rooms:</b> {{property.rooms}}
-  <br /><b>Rate:</b> {{property.price}}
-  <br />
-</mat-card>
+
+  <mat-card class="radius">
+    <img src="../../../assets/43.jpg" alt="property" height="250" width="250" />
+    <br /><b>Title:</b> {{property.title}}
+    <br /><b>Posted By:</b> {{property.user?.username}}
+    <br /><b>Rooms:</b> {{property.rooms}}
+    <br /><b>Rate:</b> {{property.price}}
+    <br />
+  </mat-card>
+
