--- a/src/app/features/search/search.component.html
+++ b/src/app/features/search/search.component.html
@@ -1,8 +1,8 @@
 <mat-card>
     <mat-form-field>
       <mat-select placeholder="Search By" (change)="searchByChange($event)">
-        <mat-option *ngFor="let filter of filters" [value]="filter">
-          {{ filter }}
+        <mat-option *ngFor="let filter of filters" [value]="filter.view">
+          {{ filter.view }}
         </mat-option>
       </mat-select>
     </mat-form-field>
