--- a/src/app/features/navbar/navbar.component.html
+++ b/src/app/features/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <header>
   <nav fxHide fxShow.gt-sm>
     <mat-toolbar color="primary">
-      <img src="/images/28313441_10214135880646939_60839564_n.png" srcset="" alt="Xenos" />
+      <img src="/images/logo.png" srcset="" alt="Xenos" />
       <button mat-button routerLink="propertyList">
         Listings
       </button>
